# CryonicEngine

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  RunCMake.ps1  RunCMake.sh  gitClean.txt  version.txt
.github/workflows/: build-release-package.yml  update-api-docs.yml  update-precompiled-tools.yml
Code/BuildSystem/AzurePipelines/: Android-arm64.yml  Android-x64.yml  Linux-x64.yml  MacOS-x64.yml  Windows-x64.yml  clang-tidy.yml
Code/BuildSystem/CMake/: FindEzOpenXR.cmake  ezUtils.cmake
Code/Editor/EditorEngineProcess/: CMakeLists.txt  EditorEngineProcess.cpp  EngineProcGameApp.cpp
Code/Editor/EditorProcessor/: EditorProcessor.cpp
Code/Engine/Core/: CMakeLists.txt  CorePCH.cpp
Code/Engine/Foundation/: CMakeLists.txt  FoundationPCH.cpp  ezEngine.natvis  ezEngine.py
Code/Engine/GameEngine/: CMakeLists.txt  GameEnginePCH.cpp
Code/Engine/RendererCore/: Declarations.h  RendererCorePCH.cpp
Code/Engine/RendererFoundation/: RendererFoundationDLL.h  RendererFoundationPCH.cpp  RendererReflection.cpp  RendererReflection.h
Code/Engine/ShaderCompilerDXC/: ShaderCompilerDXC.cpp  ShaderCompilerDXC.h
Code/Engine/ShaderCompilerHLSL/: ShaderCompilerHLSL.cpp  (+1 more)
Code/Samples/ShaderExplorer/: CMakeLists.txt  ShaderExplorer.cpp
Data/Base/: Base.ezCollectionAsset  CommonBinaries.ezExportFilter  CommonData.ezExportFilter
Documentation/: Doxyfile
Utilities/: RunStaticLinkUtil.bat
Utilities/Scripts/: copyDumps.ps1
Utilities/clang-tidy/: BuildInstructions.md  RunClangTidy.ps1  SetupWorkspace.ps1  llvm.patch
(+1853 files in other folders)
